# nomad-external-dns

./: Cargo.toml  Containerfile  Containerfile.test  Justfile  LICENSE  README.md
.github/workflows/: build.yml  ci.yml  dependabot.yml
src/: config.rs  consul.rs  dns.rs  dns_trait.rs  hetzner_dns.rs  lib.rs  main.rs  nomad.rs
tests/: dns_job.nomad.template  fixtures.rs  integration_tests.rs  nomad.hcl  nomad_job_template.nomad
tests/mocks/: consul_mock.rs  hetzner_mock.rs  mod.rs  nomad_mock.rs
