[package]
name = "nomad_external_dns"
description = "Nomad External DNS Tool"
repository = "https://github.com/codercengiz/nomad-external-dns"
license = "MIT"
readme = "README.md"
keywords = ["nomad", "external", "dns"]
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = "1.0"
clap = "4"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"