[package]
name = "nomad_external_dns"
description = "Nomad External DNS Tool"
repository = "https://github.com/codercengiz/nomad-external-dns"
license = "MIT"
readme = "README.md"
keywords = ["nomad", "external", "dns"]
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1.80"
clap = { version = "4", features = ["derive","env"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde_json = "1.0"

[dev-dependencies]
mockito = "1.4.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
